# ork_renderer

./: CHANGELOG.rst  CMakeLists.txt  genindex.html  index.html  objects.inv  package.xml  search.html  searchindex.js  stack.xml
_sources/: index.txt
doc/: conf.py
include/object_recognition_renderer/: renderer.h  renderer2d.h  renderer3d.h  renderer_glut.h  renderer_osmesa.h  utils.h
src/: CMakeLists.txt  main.cpp  model.cpp  model.h  renderer.cpp  renderer2d.cpp  renderer3d.cpp  renderer3d_impl_base.h  renderer3d_impl_glut.cpp  renderer3d_impl_glut.h  renderer3d_impl_osmesa.cpp  renderer3d_impl_osmesa.h  renderer_glut.cpp  renderer_glut.h  renderer_osmesa.cpp  utils.cpp
src/apps/: CMakeLists.txt  trainer_planar.cpp
src/renderer/assimp/code/: IFCUtil.cpp
